Add admin and is_active column Add destroy user

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,14 +10,6 @@
 			<th>Image</th>
 		</tr>
 	</thead>
-	<% @users.each_with_index do |user, index| %>
-		<tr>
-			<td><%= index+1 %></td>
-			<td><%= link_to user.email, user %></td>
-			<td><%= user.name %></td>
-			<td><%= image_tag user.image_base64, alt: user.name, class: 'img-circle' %></td>
-			<td><%= link_to 'Edit', edit_user_path(user) %></td>
-		</tr>
-	<% end %>
+	<%= render @users %>	
 </table>
 <%= will_paginate @users, renderer: BootstrapPagination::Rails %>
