--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 						<li class="active"><%= link_to 'Sign up', signup_path %></li>
 						<li><%= link_to 'Login', login_path %></li>
 					<% else %>
+						<li><%= link_to current_user.name, current_user %></li>
 						<li><%= link_to 'Logout', logout_path, method: :delete %></li>
 					<% end %>
 					<li class="dropdown">
@@ -35,7 +36,7 @@
 							<% if !user_signed_in? %>
 								<li><%= link_to 'Login', login_path %></li>
 							<% else %>
-								<li><%= link_to 'Logout', logout_path %></li>
+								<li><%= link_to 'Logout', logout_path, method: :delete %></li>
 							<% end %>
 							<li class="divider"></li>
 							<li class="dropdown-header">Nav header</li>
@@ -53,7 +54,8 @@
 		</div>
 
 		<%= yield %>
-
+		
+		<br>
 		<div class="debug">
 			<%= debug(params) if Rails.env.development? %>
 		</div>
