--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,18 +2,9 @@
 
 <div class="col-sm-10 col-sm-offset-1">
 	<h2 class="col-sm-offset-5">Update your profile</h2>
-	
 	<%= form_for @user, html: { class: "form-horizontal", role: "form" } do |f| %>
-	  <% if @user.errors.any? %>
-	  <div class="errors_explanation col-sm-offset-2">
-	    <ul>
-	     <% @user.errors.full_messages.each do |msg| %>
-	     <li><%= msg %></li>
-	     <% end %>
-	   </ul>
-	  </div>
-	  <% end %>
-
+		<%= render partial: 'shared/error_messages', locals: {object: f.object} %>
+	  
 	  <div class="form-group">
 	    <%= f.label :email, "Email", class: "col-sm-2 control-label" %> 
 	    <div class="col-sm-10">
