--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,6 +2,7 @@
 	<span class="content"><%= micropost.content %></span>
 	<span class="timestamps"><%= time_ago_in_words(micropost.created_at) %> ago</span>
 	<% if authorize_user?(micropost.user) %>
-		<span><%= link_to 'Delete', micropost, method: :delete, data: {confirm: "Are you sure?"} %></span>
+		<span><%= link_to 'Edit', edit_user_micropost_path(micropost.user, micropost) %></span>
+		<span><%= link_to 'Delete', user_micropost_path(micropost.user, micropost), method: :delete, data: {confirm: "Are you sure?"} %></span>
 	<% end %>
 </li>
