--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @micropost, html: { class: "form-horizontal col-sm-6", role: "form" } do |f| %>
+<%= form_for([current_user, @micropost], html: { class: "form-horizontal col-sm-6", role: "form" }) do |f| %>
 	<%= render partial: 'shared/error_messages', locals: {object: f.object} %>
   <div class="form-group col-sm-12">
   	<h3>New micropost</h3>
