--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
 	<div class="col-sm-4">
-		<h2>Welcome <%= link_to current_user.name.titleize, current_user %></h2>
+		<h2>Welcome <%= link_to current_user.name.titleize, user_path(current_user.name) %></h2>
 		<%= gravatar_for current_user %>
 		<p><%= pluralize(current_user.microposts.count, 'micropost') %></p>
 	</div>
