--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,6 +1,6 @@
 <tr>
 	<td><%= user.id %></td>
-	<td><%= link_to user.email, user %></td>
+	<td><%= link_to user.email, user_path(user.name) %></td>
 	<td><%= user.name %></td>
 	<td><%= image_tag user.image_base64, alt: user.name, class: 'img-circle' %></td>
 	<% if user_signed_in? && authorize_user?(user) %>
